Adding update kata file route and controller function
